fixing icon that is broken in sidebar on safari

--- a/app/styles/layout/sidebar.css
+++ b/app/styles/layout/sidebar.css
@@ -11,6 +11,10 @@
   @apply text-primary-500;
 }
 
+.main-navigation .menu .icon {
+  /* @apply size-[16px]; */
+}
+
 @media (min-width: 768px) {
   .collapsed-navigation .navigation-header .logo-text,
   /* .collapsed-navigation .navigation-header button, */
